--- a/Runtime/Poly.Settings/Poly.Settings.asmdef
+++ b/Runtime/Poly.Settings/Poly.Settings.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:92bc0159a0d1b884ab4845b6b992edb1",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:84651a3751eca9349aac36a66bba901b"
+        "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:ce81dfb5e3a58f34cb35ac3c4e2c05bd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
